# chez-grater

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cheez.cabal  chez-grater.cabal  shell.nix  stack.yaml
.github/workflows/: workflow.yml
app/: main.hs
chez-grater/: chez-grater.cabal
chez-grater/src/Chez/Grater/: Conversion.hs  Parser.hs  Scraper.hs  Types.hs
chez-grater/src/Chez/Grater/Internal/: Json.hs
chez-grater/src/Chez/Grater/Parser/: Types.hs
chez-grater/src/Chez/Grater/Readable/: Types.hs
chez-grater/src/Chez/Grater/Scraper/: Site.hs
chez-grater/test/: main.hs
chez-grater/test/Chez/: GraterSpec.hs
chez-grater/test/Chez/Grater/: ConversionSpec.hs  TestEnv.hs
chez-grater/test/fixtures/: banana-bread-rachelmansfield.txt  roast-chicken-food-network.txt
chez-server/: chez-server.cabal
chez-server/src/Chez/: Server.hs
chez-server/src/Chez/Server/: Combinable.hs  Context.hs  Conversion.hs  Servant.hs  Types.hs
chez-server/test/: main.hs
chez-server/test/Chez/Server/: ConversionSpec.hs
src/Cheez/: Combinable.hs  Conversion.hs  Json.hs  Parser.hs  Prelude.hs  Scrape.hs  Types.hs
src/Cheez/CI/: Orphans.hs
src/Cheez/Scraper/: Site.hs  Types.hs
src/Chez/: Grater.hs
src/Chez/Grater/: Combinable.hs  Conversion.hs  Json.hs  Manager.hs  Parser.hs  Prelude.hs  Scrape.hs  Scraper.hs  Types.hs
src/Chez/Grater/CI/: Orphans.hs
src/Chez/Grater/Internal/: Prelude.hs
src/Chez/Grater/Internal/CI/: Orphans.hs
src/Chez/Grater/Readable/: Types.hs
src/Chez/Grater/Scraper/: Site.hs  Types.hs
src/Chez/Grater/Test/: Gen.hs  ParsedIngredients.hs
test/: main.hs
test/Cheez/: ConversionSpec.hs  Gen.hs  ParsedIngredients.hs  ParserSpec.hs  ScrapeSpec.hs  TestEnv.hs
test/Chez/: GraterSpec.hs
test/Chez/Grater/: ConversionSpec.hs  Gen.hs  ParsedIngredients.hs  ParserSpec.hs  ReadableSpec.hs  ScrapeSpec.hs  TestEnv.hs
test/fixtures/: chicken-pot-pie-allrecipes.txt  chicken-pot-pie-pillsbury.txt  chicken-pot-pie-tasteofhome.txt
