cabal-version: 3.0
name:          cheez
version:       0.0.1
maintainer:    Dan Fithian
copyright:     2022 Dan Fithian
build-type:    Simple
extra-source-files:
    test/fixtures/banana-bread-rachelmansfield.txt
    test/fixtures/chicken-pot-pie-allrecipes.txt
    test/fixtures/chicken-pot-pie-pillsbury.txt
    test/fixtures/chicken-pot-pie-tasteofhome.txt
    test/fixtures/roast-chicken-food-network.txt

common options
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  default-language: Haskell2010

common ghc-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O0

common ghc-exe-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog -O2

library
  import: options, ghc-options
  exposed-modules:
      Cheez.Combinable
      Cheez.Conversion
      Cheez.CI.Orphans
      Cheez.Json
      Cheez.Parser
      Cheez.Prelude
      Cheez.Scrape
      Cheez.Scraper.Site
      Cheez.Scraper.Types
      Cheez.Types
  other-modules:
      Paths_cheez
  hs-source-dirs:
      src
  build-depends:
      aeson
    , attoparsec
    , base
    , bytestring
    , case-insensitive
    , containers
    , hashable
    , http-api-data
    , http-client
    , network-uri
    , scalpel
    , text
    , unordered-containers

test-suite tests
  import: options, ghc-options
  type: exitcode-stdio-1.0
  main-is: main.hs
  other-modules:
      Cheez.ConversionSpec
      Cheez.Gen
      Cheez.ParsedIngredients
      Cheez.ParserSpec
      Cheez.ScrapeSpec
      Cheez.TestEnv
      Paths_cheez
  hs-source-dirs:
      test
  build-depends:
      attoparsec
    , base
    , bytestring
    , case-insensitive
    , containers
    , file-embed
    , file-path-th
    , hspec
    , http-client
    , http-client-tls
    , http-types
    , network-uri
    , QuickCheck
    , text
    , cheez
