cabal-version: 3.0
name:          chez-grater
version:       0.0.2
author:        Dan Fithian
maintainer:    Dan Fithian
copyright:     2022 Dan Fithian
build-type:    Simple
license:       MIT
category:      Web
homepage:      https://github.com/dfithian/chez-grater
bug-reports:   https://github.com/dfithian/chez-grater/issues
synopsis:      Parse and scrape recipe blogs
description:   Remove the life story! Parse and scrape recipe blogs. Powers https://app.mo-nomz.com/.
extra-source-files:
    test/fixtures/banana-bread-rachelmansfield.txt
    test/fixtures/chicken-pot-pie-allrecipes.txt
    test/fixtures/chicken-pot-pie-pillsbury.txt
    test/fixtures/chicken-pot-pie-tasteofhome.txt
    test/fixtures/roast-chicken-food-network.txt

common options
  default-extensions:
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      ViewPatterns
  default-language: Haskell2010

common ghc-options
  ghc-options: -Wall -Wunused-packages -fwarn-tabs -fwarn-redundant-constraints -Wincomplete-uni-patterns -eventlog

library
  import: options, ghc-options
  exposed-modules:
      Chez.Grater
      Chez.Grater.Internal.CI.Orphans
      Chez.Grater.Internal.Json
      Chez.Grater.Internal.Prelude
      Chez.Grater.Manager
      Chez.Grater.Parser
      Chez.Grater.Parser.Types
      Chez.Grater.Scraper
      Chez.Grater.Scraper.Site
      Chez.Grater.Scraper.Types
      Chez.Grater.Types
  other-modules:
      Paths_chez_grater
  autogen-modules:
      Paths_chez_grater
  hs-source-dirs:
      src
  build-depends:
      aeson < 1.6
    , attoparsec < 0.14
    , base < 5.0
    , case-insensitive < 1.3
    , containers < 0.7
    , hashable < 1.4
    , http-client < 0.7
    , http-client-tls < 0.4
    , http-types < 0.13
    , network-uri < 2.7
    , scalpel < 0.7
    , text < 1.3
    , unordered-containers < 0.3

test-suite tests
  import: options, ghc-options
  type: exitcode-stdio-1.0
  main-is: main.hs
  other-modules:
      Chez.Grater.Gen
      Chez.Grater.ParsedIngredients
      Chez.Grater.ParserSpec
      Chez.Grater.TestEnv
      Chez.GraterSpec
      Paths_chez_grater
  hs-source-dirs:
      test
  build-depends:
      attoparsec < 0.14
    , base < 5.0
    , bytestring < 0.11
    , case-insensitive < 1.3
    , containers < 0.7
    , file-embed < 0.1
    , file-path-th < 0.2
    , hspec < 2.8
    , http-client < 0.7
    , network-uri < 2.7
    , QuickCheck < 2.15
    , text < 1.3
    , chez-grater
